--- a/k8/crp2-tech-challenge/1-helm-debug/helm/service/templates/service.yaml
+++ b/k8/crp2-tech-challenge/1-helm-debug/helm/service/templates/service.yaml
@@ -4,12 +4,12 @@ metadata:
   name: {{ .Values.image.name }}
   namespace: {{ .Values.namespace.name }}
   labels:
-    svc-name: {{ .Values.image.name }}
+    svc-name: {{ .Values.image.name }} 
 spec:
   type: ClusterIP
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.targetPort }}
-      protocol: TCP
+      targetPort: {{  .Values.service.targetPort }}
+      protocol: {{ .Values.service.protocol }}
   selector:
-    svc-name: {{ .Values.image.name }}
+    svc-name: {{ .Values.image.name }} 
